[package]
name = "spools"
version = "0.7.0-alpha"
edition = "2021"
authors = ["Lux Aliaga <lux@nixgoat.me>", "aoife cassidy <aoife@enby.space>"]
description = "Content scraping library for Instagram's Threads"
repository = "https://git.sr.ht/~nixgoat/spools"
documentation = "https://docs.rs/spools"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
fastrand = "2.1"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
